Fixed mobile layout bug.

--- a/app/assets/styles/modules/_site-header.css
+++ b/app/assets/styles/modules/_site-header.css
@@ -1,7 +1,5 @@
 .site-header {
-  margin: 0 0 1.5rem;
-  padding: 1.5rem 1rem 1rem;
-  overflow: hidden;
+  margin: 1.5rem 0 1.5rem;
 
   @mixin atSmall {
     padding: 1.5rem 2.5rem 1rem;
